Fixed spacing issue

--- a/mainStyles.css
+++ b/mainStyles.css
@@ -20,6 +20,9 @@
     }
 
 
+.row {
+    display: flex;
+}
 
 
 .callToAction {
